fixed css bug with no club selected on small screen

--- a/social/src/components/admin/admin.css
+++ b/social/src/components/admin/admin.css
@@ -192,7 +192,8 @@
     background-color: #FF9230;
     overflow-y: auto;
   }
-  .initial-clublist {
+  .initial-welcome {
+    height: 70%;
 
   }
 }
